// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<button
  className="sc-bdvvaa sc-gsDJrp eFkyaP jREvqu"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  className="sc-bdvvaa sc-gsDJrp czzViM jREvqu"
>
  foo
</button>
`;
